# libbpf-rs

./: .clang-format  .clippy.toml  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: audit.yml  build-kernel.yml  build-linux.yml  dependabot-merge.yml  publish.yml  rust.yml  stale.yml  test.yml
example/: Cargo.toml  README.md
example/src/: main.rs
examples/: vmlinux_514.h  vmlinux_515.h
examples/bpf_query/: Cargo.toml  LICENSE.BSD-2-Clause
examples/bpf_query/src/: main.rs
examples/btf_query/: Cargo.toml
examples/btf_query/src/: main.rs
examples/capable/: .gitignore  Cargo.toml  LICENSE.LGPL-2.1  README.md  build.rs
examples/capable/src/: main.rs
examples/capable/src/bpf/: capable.bpf.c  capable.h  vmlinux.h
examples/compiler_warnings/: Cargo.toml  README.md  build.rs
examples/compiler_warnings/src/: main.rs
examples/compiler_warnings/src/bpf/: compiler_warnings.bpf.c
examples/netfilter_blocklist/: Cargo.toml  README.md  build.rs
examples/netfilter_blocklist/src/: main.rs
examples/netfilter_blocklist/src/bpf/: netfilter_blocklist.bpf.c
examples/query/: Cargo.toml
examples/query/src/: main.rs
examples/ringbuf_multi/: Cargo.toml  build.rs
examples/ringbuf_multi/src/: main.rs
examples/ringbuf_multi/src/bpf/: ringbuf_multi.bpf.c
examples/runqslower/: .gitignore  Cargo.toml  README.md  build.rs
examples/runqslower/src/: main.rs
examples/runqslower/src/bpf/: runqslower.bpf.c  runqslower.h  vmlinux.h  vmlinux_505_structs.h
examples/task_longrun/: Cargo.toml  build.rs
examples/task_longrun/src/: main.rs
examples/task_longrun/src/bpf/: task_longrun.bpf.c  task_longrun.h
examples/tc_port_whitelist/: Cargo.toml  build.rs
examples/tc_port_whitelist/src/: main.rs
examples/tc_port_whitelist/src/bpf/: tc.bpf.c
examples/tc_port_whitelist/src/bpf/.output/: tc.skel.rs
examples/tcp_ca/: Cargo.toml  README.md  build.rs
examples/tcp_ca/src/: main.rs
examples/tcp_ca/src/bpf/: tcp_ca.bpf.c
examples/tcp_option/: Cargo.toml  README.md  build.rs
examples/tcp_option/src/: main.rs
examples/tcp_option/src/bpf/: tcp_option.bpf.c
examples/tproxy/: Cargo.toml  README.md  build.rs
examples/tproxy/src/: main.rs
examples/tproxy/src/bpf/: tproxy.bpf.c
examples/vmlinux_header/: vmlinux_505_structs.h
libbpf-cargo/: CHANGELOG.md  Cargo.toml  LICENSE.LPGL-2.1  README.md
libbpf-cargo/src/: build.rs  gen.rs  lib.rs  main.rs  make.rs  metadata.rs  test.rs  util.rs
libbpf-cargo/src/btf/: btf.rs  c_types.rs  mod.rs  types.rs
libbpf-rs/: CHANGELOG.md  Cargo.toml  LICENSE.BSD-2-Clause  LICENSE.LGPL-2.1  README.md  build.rs
libbpf-rs/dev/: Cargo.toml  build.rs  lib.rs
libbpf-rs/src/: error.rs  error2.rs  iter.rs  lib.rs  link.rs  linker.rs  map.rs  netfilter.rs  object.rs  perf_buffer.rs  print.rs  program.rs  query.rs  ringbuf.rs  skeleton.rs  streams.rs  tc.rs  tracepoint.rs  user_ringbuf.rs  util.rs  xdp.rs
libbpf-rs/src/btf/: btf.rs  c_types.rs  mod.rs  types.rs
libbpf-rs/tests/: README.md  bpf_object_regen.sh  test.rs  test_netfilter.rs  test_print.rs  test_streams.rs  test_tc.rs  test_xdp.rs
libbpf-rs/tests/common/: mod.rs
var/: config
vmlinux/: Cargo.toml
vmlinux-include/: Cargo.toml  bin.rs
vmlinux/src/: lib.rs
