[workspace.package]
version = "0.25.0"
edition = "2021"
rust-version = "1.78"
license = "LGPL-2.1-only OR BSD-2-Clause"
repository = "https://github.com/libbpf/libbpf-rs"
homepage = "https://github.com/libbpf/libbpf-rs"

[workspace]
members = [
  "libbpf-cargo",
  "libbpf-rs",
  "libbpf-rs/dev",
  "examples/bpf_query",
  "examples/capable",
  "examples/netfilter_blocklist",
  "examples/ringbuf_multi",
  "examples/runqslower",
  "examples/tc_port_whitelist",
  "examples/tcp_ca",
  "examples/tcp_option",
  "examples/tproxy",
]
resolver = "2"
