[workspace.package]
version = "0.26.0-beta.1"
edition = "2021"
rust-version = "1.82"
license = "LGPL-2.1-only OR BSD-2-Clause"
repository = "https://github.com/libbpf/libbpf-rs"
homepage = "https://github.com/libbpf/libbpf-rs"

[workspace]
members = [
  "libbpf-cargo",
  "libbpf-rs",
  "libbpf-rs/dev",
  "examples/bpf_query",
  "examples/btf_query",
  "examples/capable",
  "examples/compiler_warnings",
  "examples/netfilter_blocklist",
  "examples/ringbuf_multi",
  "examples/runqslower",
  "examples/tc_port_whitelist",
  "examples/tcp_ca",
  "examples/tcp_option",
  "examples/tproxy",
  "examples/task_longrun",
]
resolver = "2"

[workspace.lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(has_procmap_query_ioctl)', 'cfg(has_large_test_files)']}
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[workspace.lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
fn-to-numeric-cast = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-time-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"
