[package]
name = "bpf_query"
version = "0.1.0"
authors = ["Daniel Xu <dxu@dxuuu.xyz>"]
license = "LGPL-2.1-only OR BSD-2-Clause"
edition = "2021"

[dependencies]
libbpf-rs = { path = "../../libbpf-rs" }
nix = { version = "0.28", default-features = false, features = ["net", "user"] }
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
iced-x86 = "1.20.0"
