[package]
name = "capable"
version = "0.1.0"
edition.workspace = true
authors = ["Devasia Thomas <https://www.linkedin.com/in/devasiathomas>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "991dd4b8dfd8c9d62ce8999521b24f61d9b7fc52" }

[dependencies]
anyhow = "1.0.4"
libbpf-rs = { path = "../../libbpf-rs" }
libc = "0.2"
phf = { version = "0.11", features = ["macros"] }
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }

[features]
static = ["libbpf-rs/static"]

[lints]
workspace = true
