[package]
name = "netfilter_blocklist"
version = "0.1.0"
edition.workspace = true
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
ctrlc = "3.2"
libbpf-rs = { path = "../../libbpf-rs" }
plain = "0.2"
