[package]
name = "netfilter_blocklist"
version = "0.1.0"
edition.workspace = true
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "8f91e9fd5b488ff57074e589e3960940f3387830" }

[[bin]]
name = "netfilter_blocklist"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
ctrlc = "3.2"
libbpf-rs = { path = "../../libbpf-rs" }
plain = "0.2"

[lints]
workspace = true
