[package]
name = "ringbuf_multi"
version = "0.1.0"
edition.workspace = true
authors = ["Daniel Müller <deso@posteo.net>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "991dd4b8dfd8c9d62ce8999521b24f61d9b7fc52" }

[dependencies]
libbpf-rs = { path = "../../libbpf-rs" }
libc = "0.2"
plain = "0.2"

[lints]
workspace = true
