[package]
name = "runqslower"
version = "0.1.0"
edition.workspace = true
authors = ["Daniel Xu <dxu@dxuuu.xyz>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }
vmlinux = { path = "../../vmlinux" }

[dependencies]
anyhow = "1.0"
libbpf-rs = { path = "../../libbpf-rs" }
libc = "0.2"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
