[package]
name = "tc_whitelist_ports"
version = "0.1.0"
edition.workspace = true
authors = ["Michael Mullin <mimullin@blackberry.com>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "991dd4b8dfd8c9d62ce8999521b24f61d9b7fc52" }

[dependencies]
anyhow = "1.0"
libbpf-rs = { path = "../../libbpf-rs" }
libc = "0.2"
nix = { version = "0.28", default-features = false, features = ["net", "user"] }
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }

[lints]
workspace = true
