[package]
name = "tcp_ca"
version = "0.0.0"
edition.workspace = true
authors = ["Daniel Müller <deso@posteo.net>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }
vmlinux = { path = "../../vmlinux" }

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
# We rename the `libbpf-rs` dependency here to illustrate how skeleton creation
# works with that.
the-original-libbpf-rs = { path = "../../libbpf-rs", package = "libbpf-rs" }
libc = "0.2"
