[package]
name = "tcp_option"
version = "0.1.0"
edition.workspace = true
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
anyhow = "1.0"
libbpf-rs = { path = "../../libbpf-rs" }
clap = { version = "4.0.32", features = ["derive"] }
libc = "0.2"
ctrlc = "3.2"

[lints]
workspace = true
