# A development-only package for generating libbpf-rs test artifacts.

[package]
name = "libbpf-rs-dev"
version = "0.0.0"
edition.workspace = true
authors = ["Daniel Müller <deso@posteo.net>"]
publish = false

[lib]
path = "lib.rs"

[features]
# Enable this feature to opt in to the generation of unit test files.
# Having these test files created is necessary for running tests.
generate-test-files = ["libbpf-sys/vendored-libbpf", "dep:tempfile"]
# Disable generation of test files. This feature takes preference over
# `generate-test-files`.
dont-generate-test-files = []

[build-dependencies]
libbpf-sys = { version = "1.5.0", default-features = false, optional = true }
tempfile = { version = "3.15", optional = true }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dev-dependencies]
# A set of unused dependencies that we require to force correct minimum versions
# of transitive dependencies, for cases where our dependencies have incorrect
# dependency specifications themselves.
# error: unknown serde variant attribute `untagged`
_serde_unused = { package = "serde", version = "1.0.200" }
# error[E0277]: the trait bound `serde_json::Value: Hash` is not satisfied
_serde_json_unused = { package = "serde_json", version = "1.0.137" }
